--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -2,11 +2,23 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Person manager tool !!!</title>
+    <title>List person !!</title>
 </head>
 <body>
-
-
+    <h1>All person</h1>
+        <table border="2">
+            <tr>
+                <th>Name</th>
+                <th>Last name</th>
+                <th>Address</th>
+            </tr>
+            <tr th:each="city:${personList}">
+                <td th:text="${person.firstName}"></td>
+                <td th:text="${person.lastName}"></td>
+                <td th:text="${person.address}"></td>
+            </tr>
+        </table>
+        <a th:href="@{/}">Homepage</a>
 
 </body>
 </html>
